# src/interfaces/models/announcement.interface.ts
@@ -1,0 +1,16 @@
+import { Document } from "mongoose";
+
+export interface Announcement extends Document {
+  id: string;
+  space: string;
+  title: string;
+  description: string;
+  createdAt: string;
+  updatedAt: string;
+}
+
+export interface MakeAnnouncementRequest {
+  title: string;
+  space: string;
+  description: string;
+}
