# src/models/index.ts
@@ -4,3 +4,4 @@ export * from "./user.token";
 export * from "./notification";
 export * from "./payment";
 export * from "./payment.attempt";
+export * from "./announcement";
