# src/routes/announcement.routes.ts
@@ -1,0 +1,16 @@
+import express from "express";
+
+import { JwtHelper } from "../helpers/jwt/jwt.helper";
+import { config } from "../constants/settings";
+import { UserTokenDb } from "../models";
+
+const router = express.Router({ mergeParams: true });
+const jwtHelper = new JwtHelper({
+  privateKey: config.jwtPrivateKey,
+  UserTokenDb,
+});
+
+router.post("/", jwtHelper.requireAdminPermission());
+router.get("/", jwtHelper.requirePermission());
+
+export default router;
