# src/routes/space.routes.ts
@@ -10,6 +10,7 @@ import { JwtHelper } from "../helpers/jwt/jwt.helper";
 import { config } from "../constants/settings";
 import { UserTokenDb } from "../models";
 import paymentRoutes from "./payment.routes";
+import announcementRoutes from "./announcement.routes";
 
 const router = express.Router({ mergeParams: true });
 const jwtHelper = new JwtHelper({
@@ -28,5 +29,6 @@ router.put(
 );
 
 router.use("/space/:spaceId/payment", paymentRoutes);
+router.use("/space/:spaceId/announcement", announcementRoutes);
 
 export default router;
